--- a/src/commands/install.yaml
+++ b/src/commands/install.yaml
@@ -57,7 +57,7 @@ steps:
         vault version
   - unless:
       name: install buildevents
-      condition: << parameters.honeycomb-version >>
+      condition: << parameters.buildevents-version >>
       steps:
         - run:
             name: install buildevents
@@ -68,12 +68,12 @@ steps:
               buildevents --version
   - when:
       name: install buildevents
-      condition: << parameters.honeycomb-version >>
+      condition: << parameters.buildevents-version >>
       steps:
         - run:
             name: install buildevents
             command: |
-              curl -L -o buildevents https://github.com/honeycombio/buildevents/releases/download/v<< parameters.honeycomb-version >>/buildevents-linux-amd64
+              curl -L -o buildevents https://github.com/honeycombio/buildevents/releases/download/v<< parameters.buildevents-version >>/buildevents-linux-amd64
               sudo chmod +x buildevents
               sudo mv buildevents /usr/local/bin/buildevents
               buildevents --version
