[nc] test install
Signed-off-by: Nic Cheneweth <nchenewe@thoughtworks.com>

--- a/src/commands/install.yaml
+++ b/src/commands/install.yaml
@@ -1,4 +1,5 @@
 # src/commands/install.yaml
+# yamllint disable rule:line-length
 ---
 description: |
   install twdps/circleci-base-image packages on Ubuntu machine executors
