--- a/.circleci/integration-test.yml
+++ b/.circleci/integration-test.yml
@@ -19,7 +19,7 @@ jobs:
           op-version: 2.23.0-1
           teller-version: 1.5.4
           vault-version: 1.15.3-1
-          honeycomb-version: 0.14.0
+          buildevents-version: 0.14.0
       - run:
           name: confirm installed version for available packages
           command: |
