--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -7,10 +7,9 @@ description: |
   (or  other debian-based non-preconfigured executor).
 
   Presently this includes:
-  - [1password cli](https://app-updates.agilebits.com/product_history/CLI2)
-  - [teller](https://github.com/tellerops/teller) (presently the default version is fixed at 1.5.6 rather than always tracking to latest)
-  - Hashi [Vault](https://developer.hashicorp.com/vault/install?ajs_aid=c30948a0-fd06-4c47-a0c5-aa487b178c5f&product_intent=vault)
-  - Honeycomb [buildevents](https://github.com/honeycombio/buildevents)
-
+  - 1password cli
+  - teller (presently the default version is fixed at 1.5.6 rather than always tracking to latest)
+  - Hashi Vault
+  - Honeycomb buildevents
 display:
   source_url: "https://github.com/ThoughtWorks-DPS/orb-base-packages"
