--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -11,5 +11,9 @@ description: |
   - teller (presently the default version is fixed at 1.5.6 rather than always tracking to latest)
   - Hashi Vault
   - Honeycomb buildevents
+
+  The GitHub organization for these resources has changed to twplatformlabs. Until further
+  notice, the CircleCI org slug will remain twdps.
+  
 display:
-  source_url: "https://github.com/ThoughtWorks-DPS/orb-base-packages"
+  source_url: "https://github.com/twplatformlabs/orb-base-packages"
